Update configuration and enhance AI response handling
- Increased MAX_SEARCH_RESULTS from 4 to 6 in config.yml.
- Added local model settings in config.yml for LM Studio integration.
- Updated DEFAULT_INSTRUCTION in config.yml from 'assist' to 'hand'.
- Enhanced AI response generation in ai_utils.py with improved timestamp caching and real-time information handling.
- Introduced user preferences management in ChatConfigCog.py for personalized bot interactions.
- Improved message processing in on_message.py to support thread context and user preferences.
- Updated language files to reflect changes in help footer.

--- a/lang/lang.it.json
+++ b/lang/lang.it.json
@@ -16,7 +16,7 @@
     "toggleactive_msg_1": "è stato rimosso dalla lista dei canali attivi.",
     "toggleactive_msg_2": "è stato aggiunto alla lista dei canali attivi!",
     "help": "Ottieni tutti gli altri comandi!",
-    "help_footer": "https://dsc.gg/mishals-abode",
+    "help_footer": "Sanctum Sanctorum",
     "nekos": "Mostra un'immagine o un GIF casuale di un neko, una waifu, un husbando, un kitsune o altre azioni",
     "nekos_msg": "Categoria non valida fornita. Le categorie valide sono: ",
     "imagine": "Genera un'immagine",
