--- a/lang/lang.kr.json
+++ b/lang/lang.kr.json
@@ -16,7 +16,7 @@
   "toggleactive_msg_1": "활성 채널 목록에서 제거되었습니다.",
   "toggleactive_msg_2": "활성 채널 목록에 추가되었습니다!",
   "help": "다른 모든 명령을 받아보세요!",
-  "help_footer": "https://dsc.gg/mishals-abode",
+  "help_footer": "Sanctum Sanctorum",
   "nekos": "neko, waifu, husbando, kitsune 또는 기타 작업의 무작위 이미지 또는 GIF 표시",
   "nekos_msg": "잘못된 카테고리가 제공되었습니다. 유효한 카테고리는 다음과 같습니다: ",
   "imagine": "이미지 생성",
