--- a/lang/lang.ua.json
+++ b/lang/lang.ua.json
@@ -16,7 +16,7 @@
   "toggleactive_msg_1": "Вилучено зі списку активних каналів",
   "toggleactive_msg_2": "Додано до списку активних каналів!",
   "help": "Переглянути всі команди.",
-  "help_footer": "https://dsc.gg/mishals-abode",
+  "help_footer": "Sanctum Sanctorum",
   "nekos": "Показати випадковий GIF або зображення neko, waifu, husbando, kitsune GIFs або зображення.",
   "nekos_msg": "Невірна категорія. Доступні: ",
   "imagine": "Створіть зображення за допомогою AI.",
